syntax = "proto3";

option csharp_namespace = "WC.Service.Employees.gRPC.Client.Clients";

package employees;

service GreeterEmployees {
  rpc Create (EmployeeCreateRequest) returns (EmployeeCreateResponse);
}

message EmployeeCreateRequest {
  string name = 1;
  string surname = 2;
  string patronymic = 3;
  string email = 4;
  string password = 5;
  string positionName = 6;
}

message EmployeeCreateResponse {
  string employeeId = 1;
}
